# watcher

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  dev-start.sh  dev.ps1  docker-compose.yml  manage.py  process-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/2026/02/: 28_1922_13_18caeaa1db36_initial_schema.py
alembic/versions/2026/03/: 13_1448_09_08a83a3cf4d8_rename_watch__tables_to_shorter_names.py
compose/: docker-compose.coolify.yml  docker-compose.dev.yml  docker-compose.development.yml  docker-compose.production.yml
config/: asgi.py  settings.py  settings_build.py  urls.py  views.py  wsgi.py
docker/: web.Dockerfile  worker.Dockerfile
src/: app.py  bootstrap.py  worker.py
src/adapters/incoming/http/: errors.py  extensions.py  schemas.py
src/adapters/incoming/http/views/: __init__.py  healthz.py  home.py  observations.py  readyz.py  targets.py
src/adapters/outgoing/http/: extractor.py  fetcher.py
src/adapters/outgoing/persistence/: uow.py
src/adapters/outgoing/persistence/repositories/: base.py  observations.py  runs.py  targets.py
src/application/: diff.py  pipeline.py  ports.py  processors.py  runner.py
src/core/application/: run_watcher.py  watcher_runner.py
src/core/config/: settings.py
src/core/db/: base.py  engine.py  session.py  uow.py
src/core/db/models/: __init__.py  watch_observation.py  watch_run.py  watch_target.py
src/core/repositories/: base.py  watch_observations.py  watch_runs.py  watch_targets.py
src/core/services/: diff.py  extractor.py  fetcher.py  pipeline.py  processors.py
src/domain/: enums.py  events.py  exceptions.py  repositories.py  uow.py
src/domain/models/: __init__.py  base.py  observation.py  run.py  target.py
src/static/: style.css
src/templates/: base.html
src/templates/errors/: 404.html  500.html
src/watcher/: __init__.py  bootstrap.py  config.py  worker.py
src/watcher/templates/: observations.html  targets.html
src/web/: app.py
src/web/routes/: health.py  observations.py  targets.py
src/web/templates/: base.html  observations.html  targets.html
src/worker/: main.py
static/: style.css
templates/: base.html
watch/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
watch/management/commands/: run_watch.py
watch/migrations/: 0001_initial.py  0002_target_fetch_method.py
watch/services/: extractor.py  fetcher.py  processors.py  runner.py
watch/templates/watch/: home.html  observation_list.html  target_form.html  target_list.html
