[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "watcher"
version = "0.1.0"
description = "Lightweight web watcher service with a dashboard and persistent storage."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "flask>=3.0",
  "gunicorn>=21.2",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.1",
  "alembic>=1.13",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "httpx>=0.27",
  "selectolax>=0.3.21",
  "lxml>=5.0",
  "cssselect>=1.2.0",
]

[project.optional-dependencies]
development = [
  "pytest>=8.0",
  "ruff>=0.6.0",
  "types-lxml>=2026.2.16",
  "truststore>=0.10",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["templates/**/*.html", "static/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# Expanded rule set
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort (import sorting)
  "B",   # flake8-bugbear
  "UP",  # pyupgrade
  "N",   # pep8-naming
  "D",   # pydocstyle
  "A",   # flake8-builtins
  "C4",  # flake8-comprehensions
  "PL",  # Pylint rules
]
ignore = [
  "D100",  # Missing docstring in public module (often overkill)
  "D104",  # Missing docstring in public package
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Silence specific errors in migrations
"src/migrations/versions/*.py" = [
  "E501",  # Line length (Alembic generates long lines)
  "N806",  # Variable name in function (Alembic uses 'op')
  "D103",  # Missing docstring in function
]
