[project]
name = "watcher"
version = "0.1.0"
description = "Web watcher service with a dashboard and persistent storage."
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
  "django>=6.0",
  "django-stubs-ext>=6.0",
  "python-dotenv>=1.0",
  "dj-database-url>=2.2",
  "psycopg[binary]>=3.2",
  "whitenoise>=6.8",
  "httpx>=0.27",
  "lxml>=5.0",
  "cssselect>=1.2.0",
]

[dependency-groups]
prod = [
  "gunicorn>=21.2",
]
dev = [
  "ruff>=0.6.0",
  "mypy>=1.14",
  "django-stubs[compatible-mypy]>=6.0",
  "types-lxml>=2026.2.16",
]

[tool.uv]
package = false

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "config.settings"

[tool.pyright]
typeCheckingMode = "strict"
include = ["config", "watch", "manage.py"]
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
  "E",
  "W",
  "F",
  "I",
  "B",
  "UP",
  "N",
  "D",
  "A",
  "C4",
  "PL",
]
ignore = [
  "D100",
  "D104",
  "D106",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"manage.py" = [
  "PLC0415",
]
"**/migrations/*.py" = [
  "E501",
  "D101",
  "D103",
]
